archive/test/test_run_fixed4_log.txt
Test dir: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src\meningioma_ftir_pipeline\test
Pipeline dir: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src
Verifying data files...
Training set: 14 samples
Test set: 6 samples
Wavenumbers: 441 points
[2025-10-21 08:12:01] === MATLAB VERSION INFO ===
[2025-10-21 08:12:01] Bioinformatics Toolbox Version 24.2
[2025-10-21 08:12:01] Data Acquisition Toolbox Version 24.2
[2025-10-21 08:12:01] Deep Learning Toolbox Version 24.2
[2025-10-21 08:12:01] Image Processing Toolbox Version 24.2
[2025-10-21 08:12:01] MATLAB Version 24.2
[2025-10-21 08:12:01] MATLAB Coder Version 24.2
[2025-10-21 08:12:01] MATLAB Compiler Version 24.2
[2025-10-21 08:12:01] Medical Imaging Toolbox Version 24.2
[2025-10-21 08:12:01] Optimization Toolbox Version 24.2
[2025-10-21 08:12:01] Parallel Computing Toolbox Version 24.2
[2025-10-21 08:12:01] Signal Processing Toolbox Version 24.2
[2025-10-21 08:12:01] Statistics and Machine Learning Toolbox Version 24.2
[2025-10-21 08:12:01] ========================
[2025-10-21 08:12:01] Starting pipeline execution with test configuration
[2025-10-21 08:12:01] Starting Phase 0: Quality Control
Loading data...
Processing training set...
Debug - Sample 1, Spectrum 1:
Signal: 0.1324, Noise: 0.0002, SNR: 597.0585
Debug - Sample 1: Max absorbance: 0.1375
Debug - Sample 1: Baseline SD: 0.0013
Debug - Sample 1: Peak ratio: 1.2482
Training set processing complete.
Processing test set...
Debug - Sample 1, Spectrum 1:
Signal: 0.1740, Noise: 0.0014, SNR: 121.6123
Debug - Sample 1: Max absorbance: 0.1789
Debug - Sample 1: Baseline SD: 0.0015
Debug - Sample 1: Peak ratio: 1.8356
Test set processing complete.
[2025-10-21 08:12:07] Starting Phase 1: Data Loading
Loading raw data...
Loading QC results...
Processing training set...
Processing test set...
Creating analysis-ready datasets...
DEBUG: y_train class: categorical
DEBUG: y_train is categorical with 3 unique values
DEBUG: y_train categories: WHO-1, WHO-2, WHO-3
DEBUG: trainingData.y field type: double
DEBUG: trainingData has y field

Dataset dimensions after QC:
Training set: 14 samples × 441 wavenumbers
Test set: 6 samples × 441 wavenumbers

Class distribution:
Training WHO-1: 7, WHO-3: 7
Test WHO-1: 3, WHO-3: 3
Saving processed data...
Data preparation complete.
[2025-10-21 08:12:10] Starting Phase 2: Feature Selection
Loading preprocessed data...
DEBUG: Fields in trainingData: X y probe_ids probe_table 
Loading preprocessed data...
DEBUG: trainingData.y class: double
DEBUG: trainingData.y size: [[14 1]]
Computing PCA on training data...
Selected 4 PCs explaining 97.2% variance
DEBUG: WHO-1 samples: 7, WHO-3 samples: 7
[2025-10-21 08:12:13] Starting Phase 3: Cross-Validation
Loading transformed training data...\nSetting up cross-validation...\nUsing 3 folds from configuration\nUsing 10 repeats from configuration\nCross-validation settings: 3 folds, 10 repeats\n
Evaluating LDA...
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
Repeat 10/10
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double

Evaluating PLSDA...
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
Repeat 10/10
AUC calculation: Using positive class of type double

Evaluating SVM...
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
Repeat 10/10
AUC calculation: Using positive class of type double

Evaluating RandomForest...
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
Repeat 10/10
AUC calculation: Using positive class of type double

Aggregating results...

Best classifier: SVM
Mean F2-score: 0.469 ± 0.115

===== ERROR OCCURRED =====
Error message: G must be the same length as X or the same length as the number of columns in X.
Function: straightenX, Line: 1002
Function: boxplot, Line: 275
Function: create_cv_performance_plots, Line: 569
Function: run_cross_validation, Line: 263
Function: run_pipeline_test_simplified, Line: 71
Error using boxplot>straightenX (line 1002)
G must be the same length as X or the same length as the number of columns in X.

Error in boxplot (line 275)
[xDat,gDat,origRow,xlen,gexplicit,origInd,origNumXCols] = straightenX(x,g);
                                                          ^^^^^^^^^^^^^^^^
Error in run_cross_validation>create_cv_performance_plots (line 569)
        boxplot(cell2mat(data), repmat(categorical(classifierNames), [50 1]));
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run_cross_validation (line 263)
create_cv_performance_plots(cv_results, classifierNames);
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run_pipeline_test_simplified (line 71)
        cv_results = run_cross_validation(cfg);
                     ^^^^^^^^^^^^^^^^^^^^^^^^^
